--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,25 +4,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <!-- add servlet -->
+
     <servlet>
-        <servlet-name>add</servlet-name>
-        <servlet-class>by.vironit.taskscheduler.servlets.AddServlet</servlet-class>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>by.vironit.taskscheduler.servlets.login.LoginServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>add</servlet-name>
-        <url-pattern>/add</url-pattern>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/log_in</url-pattern>
     </servlet-mapping>
 
-    <!-- list servlet -->
     <servlet>
-        <servlet-name>list</servlet-name>
-        <servlet-class>by.vironit.taskscheduler.servlets.ListServlet</servlet-class>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <servlet-class>by.vironit.taskscheduler.servlets.registration.RegistrationServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>list</servlet-name>
-        <url-pattern>/list</url-pattern>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <url-pattern>/sign_in</url-pattern>
     </servlet-mapping>
+
 </web-app>
