--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,17 @@
         <servlet.version>4.0.1</servlet.version>
         <jsp.version>2.3.1</jsp.version>
         <hibernate.version>5.5.7.Final</hibernate.version>
+        <lombok.version>1.16.18</lombok.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
