--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,4 +15,9 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <mime-mapping>
+        <extension>ico</extension>
+        <mime-type>image/png</mime-type>
+    </mime-mapping>
+
 </web-app>
